# cuckoo

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  settings.yaml
.config/elasticsearch/: mappings.json
.config/vespa/: doc.sd  services.xml
.config/vespa/schemas/: doc.sd
docs/: 01_Search_Fundamentals.md  02_Elasticsearch_vs_Vespa.md  03_Embeddings_and_Compute.md  04_Vespa_Schemas_vs_ES_Mappings.md  05_API_First_Architecture.md  06_Vespa_Full_Text_Search.md
scripts/: deploy_vespa.py
src/: api.py  comparison.py  config.py  data.py  indexer.py  main.py  reports.py  search_store.py  services.py
src/embedding_exporter/: exporter.py
tests/: conftest.py  test_indexation.py  test_search.py
